# CRAG-Demo-workflow

./: .gitignore  AGENT_GUIDE.md  Dockerfile  LICENSE  QUICKSTART_WINDOWS.md  README.md  pyproject.toml  requirements.txt
app/: __init__.py  cli.py  main.py
app/agents/: base.py  generation_agent.py  orchestrator.py  retrieval_agent.py
app/api/routes/: rag.py
app/core/: config.py  logging.py
app/domains/: default_domain.py
app/llm/: providers.py
app/models/: schemas.py
app/rag/: chunker.py  embeddings.py  pipeline.py  store.py
app/tools/: text_tools.py
configs/: .secrets.yaml.example  logging.yaml  settings.yaml
scripts/: run.ps1  run.sh  setup.ps1  setup.sh  validate.ps1  validate.sh
tests/: test_api.py  test_rag_pipeline.py
